lab4/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | error SEMI
    9       | Specifier error SEMI
   10       | error Specifier SEMI

   11 ExtDecList: VarDec
   12           | VarDec COMMA ExtDecList
   13           | VarDec error ExtDefList

   14 Specifier: TYPE
   15          | StructSpecifier

   16 StructSpecifier: STRUCT OptTag LC DefList RC
   17                | STRUCT Tag

   18 OptTag: ID
   19       | ε

   20 Tag: ID

   21 VarDec: ID
   22       | VarDec LB INT RB
   23       | VarDec LB error RB

   24 FunDec: ID LP VarList RP
   25       | ID LP RP
   26       | ID LP error RP
   27       | error LP VarList RP

   28 VarList: ParamDec COMMA VarList
   29        | ParamDec

   30 ParamDec: Specifier VarDec

   31 CompSt: LC DefList StmtList RC
   32       | error RC

   33 StmtList: Stmt StmtList
   34         | ε

   35 Stmt: Exp SEMI
   36     | CompSt
   37     | RETURN Exp SEMI
   38     | IF LP Exp RP Stmt
   39     | IF LP Exp RP Stmt ELSE Stmt
   40     | WHILE LP Exp RP Stmt
   41     | error SEMI
   42     | Exp error SEMI
   43     | RETURN Exp error
   44     | RETURN error SEMI

   45 DefList: Def DefList
   46        | ε

   47 Def: Specifier DecList SEMI
   48    | Specifier error SEMI
   49    | Specifier DecList error

   50 DecList: Dec
   51        | Dec COMMA DecList

   52 Dec: VarDec
   53    | VarDec ASSIGNOP Exp

   54 Exp: Exp ASSIGNOP Exp
   55    | Exp AND Exp
   56    | Exp OR Exp
   57    | Exp RELOP Exp
   58    | Exp PLUS Exp
   59    | Exp MINUS Exp
   60    | Exp STAR Exp
   61    | Exp DIV Exp
   62    | LP Exp RP
   63    | MINUS Exp
   64    | NOT Exp
   65    | ID LP Args RP
   66    | ID LP RP
   67    | Exp LB Exp RB
   68    | Exp DOT ID
   69    | ID
   70    | INT
   71    | FLOAT
   72    | STRING
   73    | Exp ASSIGNOP error
   74    | Exp AND error
   75    | Exp OR error
   76    | Exp RELOP error
   77    | Exp PLUS error
   78    | Exp MINUS error
   79    | Exp STAR error
   80    | Exp DIV error
   81    | LP error RP
   82    | MINUS error
   83    | NOT error
   84    | ID LP error RP
   85    | Exp LB error RB

   86 Args: Exp COMMA Args
   87     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 9 10 13 23 26 27 32 41 42 43 44 48 49 73 74 75 76 77 78 79 80 81 82 83 84 85
    INT <node> (258) 22 70
    FLOAT <node> (259) 71
    ID <node> (260) 18 20 21 24 25 26 65 66 68 69 84
    STRING <node> (261) 72
    SEMI <node> (262) 4 5 7 8 9 10 35 37 41 42 44 47 48
    COMMA <node> (263) 12 28 51 86
    ASSIGNOP <node> (264) 53 54 73
    RELOP <node> (265) 57 76
    PLUS <node> (266) 58 77
    MINUS <node> (267) 59 63 78 82
    STAR <node> (268) 60 79
    DIV <node> (269) 61 80
    AND <node> (270) 55 74
    OR <node> (271) 56 75
    NOT <node> (272) 64 83
    DOT <node> (273) 68
    TYPE <node> (274) 14
    LP <node> (275) 24 25 26 27 38 39 40 62 65 66 81 84
    RP <node> (276) 24 25 26 27 38 39 40 62 65 66 81 84
    LB <node> (277) 22 23 67 85
    RB <node> (278) 22 23 67 85
    LC <node> (279) 16 31
    RC <node> (280) 16 31 32
    STRUCT <node> (281) 16 17
    RETURN <node> (282) 37 43 44
    IF <node> (283) 38 39
    ELSE <node> (284) 39
    WHILE <node> (285) 40
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program <node> (33)
        on left: 1
        on right: 0
    ExtDefList <node> (34)
        on left: 2 3
        on right: 1 2 13
    ExtDef <node> (35)
        on left: 4 5 6 7 8 9 10
        on right: 2
    ExtDecList <node> (36)
        on left: 11 12 13
        on right: 4 12
    Specifier <node> (37)
        on left: 14 15
        on right: 4 5 6 7 9 10 30 47 48 49
    StructSpecifier <node> (38)
        on left: 16 17
        on right: 15
    OptTag <node> (39)
        on left: 18 19
        on right: 16
    Tag <node> (40)
        on left: 20
        on right: 17
    VarDec <node> (41)
        on left: 21 22 23
        on right: 11 12 13 22 23 30 52 53
    FunDec <node> (42)
        on left: 24 25 26 27
        on right: 6 7
    VarList <node> (43)
        on left: 28 29
        on right: 24 27 28
    ParamDec <node> (44)
        on left: 30
        on right: 28 29
    CompSt <node> (45)
        on left: 31 32
        on right: 6 36
    StmtList <node> (46)
        on left: 33 34
        on right: 31 33
    Stmt <node> (47)
        on left: 35 36 37 38 39 40 41 42 43 44
        on right: 33 38 39 40
    DefList <node> (48)
        on left: 45 46
        on right: 16 31 45
    Def <node> (49)
        on left: 47 48 49
        on right: 45
    DecList <node> (50)
        on left: 50 51
        on right: 47 49 51
    Dec <node> (51)
        on left: 52 53
        on right: 50 51
    Exp <node> (52)
        on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85
        on right: 35 37 38 39 40 42 43 53 54 55 56 57 58 59 60 61 62 63 64 67 68 73 74 75 76 77 78 79 80 85 86 87
    Args <node> (53)
        on left: 86 87
        on right: 65 86


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error • SEMI
   10       | error • Specifier SEMI

    SEMI    shift, and go to state 9
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 10
    StructSpecifier  go to state 8


State 2

   14 Specifier: TYPE •

    $default  reduce using rule 14 (Specifier)


State 3

   16 StructSpecifier: STRUCT • OptTag LC DefList RC
   17                | STRUCT • Tag

    ID  shift, and go to state 11

    $default  reduce using rule 19 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)
    SEMI  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • FunDec SEMI
    9       | Specifier • error SEMI

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   15 Specifier: StructSpecifier •

    $default  reduce using rule 15 (Specifier)


State 9

    8 ExtDef: error SEMI •

    $default  reduce using rule 8 (ExtDef)


State 10

   10 ExtDef: error Specifier • SEMI

    SEMI  shift, and go to state 22


State 11

   18 OptTag: ID •
   20 Tag: ID •

    LC        reduce using rule 18 (OptTag)
    $default  reduce using rule 20 (Tag)


State 12

   16 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 23


State 13

   17 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 17 (StructSpecifier)


State 14

    0 $accept: Program $end •

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 16

    9 ExtDef: Specifier error • SEMI
   27 FunDec: error • LP VarList RP

    SEMI  shift, and go to state 24
    LP    shift, and go to state 25


State 17

   21 VarDec: ID •
   24 FunDec: ID • LP VarList RP
   25       | ID • LP RP
   26       | ID • LP error RP

    LP  shift, and go to state 26

    $default  reduce using rule 21 (VarDec)


State 18

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 27


State 20

   11 ExtDecList: VarDec •
   12           | VarDec • COMMA ExtDecList
   13           | VarDec • error ExtDefList
   22 VarDec: VarDec • LB INT RB
   23       | VarDec • LB error RB

    error  shift, and go to state 28
    COMMA  shift, and go to state 29
    LB     shift, and go to state 30

    SEMI  reduce using rule 11 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec • CompSt
    7       | Specifier FunDec • SEMI

    error  shift, and go to state 31
    SEMI   shift, and go to state 32
    LC     shift, and go to state 33

    CompSt  go to state 34


State 22

   10 ExtDef: error Specifier SEMI •

    $default  reduce using rule 10 (ExtDef)


State 23

   16 StructSpecifier: STRUCT OptTag LC • DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 46 (DefList)

    Specifier        go to state 35
    StructSpecifier  go to state 8
    DefList          go to state 36
    Def              go to state 37


State 24

    9 ExtDef: Specifier error SEMI •

    $default  reduce using rule 9 (ExtDef)


State 25

   27 FunDec: error LP • VarList RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 39
    ParamDec         go to state 40


State 26

   24 FunDec: ID LP • VarList RP
   25       | ID LP • RP
   26       | ID LP • error RP

    error   shift, and go to state 41
    TYPE    shift, and go to state 2
    RP      shift, and go to state 42
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 43
    ParamDec         go to state 40


State 27

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 28

   13 ExtDecList: VarDec error • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    SEMI  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 44
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 29

   12 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 45

    ExtDecList  go to state 46
    VarDec      go to state 20


State 30

   22 VarDec: VarDec LB • INT RB
   23       | VarDec LB • error RB

    error  shift, and go to state 47
    INT    shift, and go to state 48


State 31

   32 CompSt: error • RC

    RC  shift, and go to state 49


State 32

    7 ExtDef: Specifier FunDec SEMI •

    $default  reduce using rule 7 (ExtDef)


State 33

   31 CompSt: LC • DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 46 (DefList)

    Specifier        go to state 35
    StructSpecifier  go to state 8
    DefList          go to state 50
    Def              go to state 37


State 34

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 35

   47 Def: Specifier • DecList SEMI
   48    | Specifier • error SEMI
   49    | Specifier • DecList error

    error  shift, and go to state 51
    ID     shift, and go to state 45

    VarDec   go to state 52
    DecList  go to state 53
    Dec      go to state 54


State 36

   16 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 55


State 37

   45 DefList: Def • DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 46 (DefList)

    Specifier        go to state 35
    StructSpecifier  go to state 8
    DefList          go to state 56
    Def              go to state 37


State 38

   30 ParamDec: Specifier • VarDec

    ID  shift, and go to state 45

    VarDec  go to state 57


State 39

   27 FunDec: error LP VarList • RP

    RP  shift, and go to state 58


State 40

   28 VarList: ParamDec • COMMA VarList
   29        | ParamDec •

    COMMA  shift, and go to state 59

    $default  reduce using rule 29 (VarList)


State 41

   26 FunDec: ID LP error • RP

    RP  shift, and go to state 60


State 42

   25 FunDec: ID LP RP •

    $default  reduce using rule 25 (FunDec)


State 43

   24 FunDec: ID LP VarList • RP

    RP  shift, and go to state 61


State 44

   13 ExtDecList: VarDec error ExtDefList •

    $default  reduce using rule 13 (ExtDecList)


State 45

   21 VarDec: ID •

    $default  reduce using rule 21 (VarDec)


State 46

   12 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 12 (ExtDecList)


State 47

   23 VarDec: VarDec LB error • RB

    RB  shift, and go to state 62


State 48

   22 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 63


State 49

   32 CompSt: error RC •

    $default  reduce using rule 32 (CompSt)


State 50

   31 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 64
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71
    LC      shift, and go to state 33
    RETURN  shift, and go to state 72
    IF      shift, and go to state 73
    WHILE   shift, and go to state 74

    RC  reduce using rule 34 (StmtList)

    CompSt    go to state 75
    StmtList  go to state 76
    Stmt      go to state 77
    Exp       go to state 78


State 51

   48 Def: Specifier error • SEMI

    SEMI  shift, and go to state 79


State 52

   22 VarDec: VarDec • LB INT RB
   23       | VarDec • LB error RB
   52 Dec: VarDec •
   53    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 80
    LB        shift, and go to state 30

    $default  reduce using rule 52 (Dec)


State 53

   47 Def: Specifier DecList • SEMI
   49    | Specifier DecList • error

    error  shift, and go to state 81
    SEMI   shift, and go to state 82


State 54

   50 DecList: Dec •
   51        | Dec • COMMA DecList

    COMMA  shift, and go to state 83

    $default  reduce using rule 50 (DecList)


State 55

   16 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 16 (StructSpecifier)


State 56

   45 DefList: Def DefList •

    $default  reduce using rule 45 (DefList)


State 57

   22 VarDec: VarDec • LB INT RB
   23       | VarDec • LB error RB
   30 ParamDec: Specifier VarDec •

    LB  shift, and go to state 30

    $default  reduce using rule 30 (ParamDec)


State 58

   27 FunDec: error LP VarList RP •

    $default  reduce using rule 27 (FunDec)


State 59

   28 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 84
    ParamDec         go to state 40


State 60

   26 FunDec: ID LP error RP •

    $default  reduce using rule 26 (FunDec)


State 61

   24 FunDec: ID LP VarList RP •

    $default  reduce using rule 24 (FunDec)


State 62

   23 VarDec: VarDec LB error RB •

    $default  reduce using rule 23 (VarDec)


State 63

   22 VarDec: VarDec LB INT RB •

    $default  reduce using rule 22 (VarDec)


State 64

   32 CompSt: error • RC
   41 Stmt: error • SEMI

    SEMI  shift, and go to state 85
    RC    shift, and go to state 49


State 65

   70 Exp: INT •

    $default  reduce using rule 70 (Exp)


State 66

   71 Exp: FLOAT •

    $default  reduce using rule 71 (Exp)


State 67

   65 Exp: ID • LP Args RP
   66    | ID • LP RP
   69    | ID •
   84    | ID • LP error RP

    LP  shift, and go to state 86

    $default  reduce using rule 69 (Exp)


State 68

   72 Exp: STRING •

    $default  reduce using rule 72 (Exp)


State 69

   63 Exp: MINUS • Exp
   82    | MINUS • error

    error   shift, and go to state 87
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71

    Exp  go to state 88


State 70

   64 Exp: NOT • Exp
   83    | NOT • error

    error   shift, and go to state 89
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71

    Exp  go to state 90


State 71

   62 Exp: LP • Exp RP
   81    | LP • error RP

    error   shift, and go to state 91
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71

    Exp  go to state 92


State 72

   37 Stmt: RETURN • Exp SEMI
   43     | RETURN • Exp error
   44     | RETURN • error SEMI

    error   shift, and go to state 93
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71

    Exp  go to state 94


State 73

   38 Stmt: IF • LP Exp RP Stmt
   39     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 95


State 74

   40 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 96


State 75

   36 Stmt: CompSt •

    $default  reduce using rule 36 (Stmt)


State 76

   31 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 97


State 77

   33 StmtList: Stmt • StmtList

    error   shift, and go to state 64
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71
    LC      shift, and go to state 33
    RETURN  shift, and go to state 72
    IF      shift, and go to state 73
    WHILE   shift, and go to state 74

    RC  reduce using rule 34 (StmtList)

    CompSt    go to state 75
    StmtList  go to state 98
    Stmt      go to state 77
    Exp       go to state 78


State 78

   35 Stmt: Exp • SEMI
   42     | Exp • error SEMI
   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   67    | Exp • LB Exp RB
   68    | Exp • DOT ID
   73    | Exp • ASSIGNOP error
   74    | Exp • AND error
   75    | Exp • OR error
   76    | Exp • RELOP error
   77    | Exp • PLUS error
   78    | Exp • MINUS error
   79    | Exp • STAR error
   80    | Exp • DIV error
   85    | Exp • LB error RB

    error     shift, and go to state 99
    SEMI      shift, and go to state 100
    ASSIGNOP  shift, and go to state 101
    RELOP     shift, and go to state 102
    PLUS      shift, and go to state 103
    MINUS     shift, and go to state 104
    STAR      shift, and go to state 105
    DIV       shift, and go to state 106
    AND       shift, and go to state 107
    OR        shift, and go to state 108
    DOT       shift, and go to state 109
    LB        shift, and go to state 110


State 79

   48 Def: Specifier error SEMI •

    $default  reduce using rule 48 (Def)


State 80

   53 Dec: VarDec ASSIGNOP • Exp

    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71

    Exp  go to state 111


State 81

   49 Def: Specifier DecList error •

    $default  reduce using rule 49 (Def)


State 82

   47 Def: Specifier DecList SEMI •

    $default  reduce using rule 47 (Def)


State 83

   51 DecList: Dec COMMA • DecList

    ID  shift, and go to state 45

    VarDec   go to state 52
    DecList  go to state 112
    Dec      go to state 54


State 84

   28 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 28 (VarList)


State 85

   41 Stmt: error SEMI •

    $default  reduce using rule 41 (Stmt)


State 86

   65 Exp: ID LP • Args RP
   66    | ID LP • RP
   84    | ID LP • error RP

    error   shift, and go to state 113
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71
    RP      shift, and go to state 114

    Exp   go to state 115
    Args  go to state 116


State 87

   82 Exp: MINUS error •

    $default  reduce using rule 82 (Exp)


State 88

   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   63    | MINUS Exp •
   67    | Exp • LB Exp RB
   68    | Exp • DOT ID
   73    | Exp • ASSIGNOP error
   74    | Exp • AND error
   75    | Exp • OR error
   76    | Exp • RELOP error
   77    | Exp • PLUS error
   78    | Exp • MINUS error
   79    | Exp • STAR error
   80    | Exp • DIV error
   85    | Exp • LB error RB

    STAR  shift, and go to state 105
    DIV   shift, and go to state 106
    DOT   shift, and go to state 109
    LB    shift, and go to state 110

    $default  reduce using rule 63 (Exp)


State 89

   83 Exp: NOT error •

    $default  reduce using rule 83 (Exp)


State 90

   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   64    | NOT Exp •
   67    | Exp • LB Exp RB
   68    | Exp • DOT ID
   73    | Exp • ASSIGNOP error
   74    | Exp • AND error
   75    | Exp • OR error
   76    | Exp • RELOP error
   77    | Exp • PLUS error
   78    | Exp • MINUS error
   79    | Exp • STAR error
   80    | Exp • DIV error
   85    | Exp • LB error RB

    DOT  shift, and go to state 109
    LB   shift, and go to state 110

    $default  reduce using rule 64 (Exp)


State 91

   81 Exp: LP error • RP

    RP  shift, and go to state 117


State 92

   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   62    | LP Exp • RP
   67    | Exp • LB Exp RB
   68    | Exp • DOT ID
   73    | Exp • ASSIGNOP error
   74    | Exp • AND error
   75    | Exp • OR error
   76    | Exp • RELOP error
   77    | Exp • PLUS error
   78    | Exp • MINUS error
   79    | Exp • STAR error
   80    | Exp • DIV error
   85    | Exp • LB error RB

    ASSIGNOP  shift, and go to state 101
    RELOP     shift, and go to state 102
    PLUS      shift, and go to state 103
    MINUS     shift, and go to state 104
    STAR      shift, and go to state 105
    DIV       shift, and go to state 106
    AND       shift, and go to state 107
    OR        shift, and go to state 108
    DOT       shift, and go to state 109
    RP        shift, and go to state 118
    LB        shift, and go to state 110


State 93

   44 Stmt: RETURN error • SEMI

    SEMI  shift, and go to state 119


State 94

   37 Stmt: RETURN Exp • SEMI
   43     | RETURN Exp • error
   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   67    | Exp • LB Exp RB
   68    | Exp • DOT ID
   73    | Exp • ASSIGNOP error
   74    | Exp • AND error
   75    | Exp • OR error
   76    | Exp • RELOP error
   77    | Exp • PLUS error
   78    | Exp • MINUS error
   79    | Exp • STAR error
   80    | Exp • DIV error
   85    | Exp • LB error RB

    error     shift, and go to state 120
    SEMI      shift, and go to state 121
    ASSIGNOP  shift, and go to state 101
    RELOP     shift, and go to state 102
    PLUS      shift, and go to state 103
    MINUS     shift, and go to state 104
    STAR      shift, and go to state 105
    DIV       shift, and go to state 106
    AND       shift, and go to state 107
    OR        shift, and go to state 108
    DOT       shift, and go to state 109
    LB        shift, and go to state 110


State 95

   38 Stmt: IF LP • Exp RP Stmt
   39     | IF LP • Exp RP Stmt ELSE Stmt

    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71

    Exp  go to state 122


State 96

   40 Stmt: WHILE LP • Exp RP Stmt

    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71

    Exp  go to state 123


State 97

   31 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 31 (CompSt)


State 98

   33 StmtList: Stmt StmtList •

    $default  reduce using rule 33 (StmtList)


State 99

   42 Stmt: Exp error • SEMI

    SEMI  shift, and go to state 124


State 100

   35 Stmt: Exp SEMI •

    $default  reduce using rule 35 (Stmt)


State 101

   54 Exp: Exp ASSIGNOP • Exp
   73    | Exp ASSIGNOP • error

    error   shift, and go to state 125
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71

    Exp  go to state 126


State 102

   57 Exp: Exp RELOP • Exp
   76    | Exp RELOP • error

    error   shift, and go to state 127
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71

    Exp  go to state 128


State 103

   58 Exp: Exp PLUS • Exp
   77    | Exp PLUS • error

    error   shift, and go to state 129
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71

    Exp  go to state 130


State 104

   59 Exp: Exp MINUS • Exp
   78    | Exp MINUS • error

    error   shift, and go to state 131
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71

    Exp  go to state 132


State 105

   60 Exp: Exp STAR • Exp
   79    | Exp STAR • error

    error   shift, and go to state 133
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71

    Exp  go to state 134


State 106

   61 Exp: Exp DIV • Exp
   80    | Exp DIV • error

    error   shift, and go to state 135
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71

    Exp  go to state 136


State 107

   55 Exp: Exp AND • Exp
   74    | Exp AND • error

    error   shift, and go to state 137
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71

    Exp  go to state 138


State 108

   56 Exp: Exp OR • Exp
   75    | Exp OR • error

    error   shift, and go to state 139
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71

    Exp  go to state 140


State 109

   68 Exp: Exp DOT • ID

    ID  shift, and go to state 141


State 110

   67 Exp: Exp LB • Exp RB
   85    | Exp LB • error RB

    error   shift, and go to state 142
    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    STRING  shift, and go to state 68
    MINUS   shift, and go to state 69
    NOT     shift, and go to state 70
    LP      shift, and go to state 71

    Exp  go to state 143


State 111

   53 Dec: VarDec ASSIGNOP Exp •
   54 Exp: Exp • ASSIGNOP Exp
   55    | Exp • AND Exp
   56    | Exp • OR Exp
   57    | Exp • RELOP Exp
   58    | Exp • PLUS Exp
   59    | Exp • MINUS Exp
   60    | Exp • STAR Exp
   61    | Exp • DIV Exp
   67    | Exp • LB Exp RB
   68    | Exp • DOT ID
   73    | Exp • ASSIGNOP error
   74    | Exp • AND error
   75    | Exp • OR error
   76    | Exp • RELOP error
   77    | Exp • PLUS error
   78    | Exp • MINUS error
   79    | Exp • STAR error
   80    | Exp • DIV error
   85    | Exp • LB error RB

    ASSIGNOP  shift, and go to state 101
    RELOP     shift, and go to state 102
    PLUS      shift, and go to state 103
    MINUS     shift, and go to state 104
    STAR      shift, and go to state 105
    DIV       shift, and go to state 106
    AND       shift, and go to state 107
    OR        shift, and go to state 108
    DOT       shift, and go to state 109
    LB        shift, and go to state 110

    $default  reduce using rule 53 (Dec)


State 112

   51 DecList: Dec COMMA DecList •

    $default  reduce using rule 51 (DecList)


State 113

   84 Exp: ID LP error • RP

    RP  shift, and go to state 144


State 114

   66 Exp: ID LP RP •

    $default  reduce using rule 66 (Exp)


State 115
